@@ -4,8 +4,11 @@ from django.contrib.sites.models import Site
 from django.utils import simplejson
 
 import allauth.app_settings
-from allauth.utils import get_login_redirect_url
+from allauth.account import app_settings as account_settings
+from allauth.utils import (get_login_redirect_url,
+                           valid_email_or_none)
 from allauth.account.adapter import get_adapter
+from allauth.account.models import EmailAddress
 
 import providers
 from fields import JSONField
@@ -122,14 +125,18 @@ class SocialLogin(object):
     url (e.g. OAuth2 `state` parameter) -- do not put any secrets in
     there. It currently only contains the url to redirect to after
     login.
+
+    `email_addresses` (list of `EmailAddress`): Optional list of
+    e-mail addresses retrieved from the provider.
     """
 
-    def __init__(self, account, token=None):
+    def __init__(self, account, token=None, email_addresses=[]):
         if token:
             assert token.account is None or token.account == account
             token.account = account
         self.token = token
         self.account = account
+        self.email_addresses = email_addresses
         self.state = {}
 
     def save(self):
@@ -140,6 +147,17 @@ class SocialLogin(object):
         if self.token:
             self.token.account = self.account
             self.token.save()
+        for email_address in self.email_addresses:
+            # Pick up only valid ones...
+            email = valid_email_or_none(email_address.email)
+            if not email:
+                continue
+            # ... and non-conflicting ones...
+            if (account_settings.UNIQUE_EMAIL 
+                and EmailAddress.objects.filter(email__iexact=email).exists()):
+                continue
+            email_address.user = user
+            email_address.save()
 
     @property
     def is_existing(self):
