@@ -1,3 +1,8 @@
+2013-01-07  Raymond Penners  <raymond.penners@intenct.nl>
+
+	* google: support for Google's `verified_email` flag to determine
+	whether or not to send confirmation e-mails.
+
 2012-12-22  Raymond Penners  <raymond.penners@intenct.nl>
 
 	* socialaccount: Added support for Stack Exchange.
